--- a/app/src/main/res/layout/item_todo.xml
+++ b/app/src/main/res/layout/item_todo.xml
@@ -3,22 +3,14 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="48dp"
     android:orientation="horizontal"
     android:gravity="center_vertical">
 
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/itemTodoTitle"
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="12dp"
-        android:layout_weight="1"/>
-
-    <androidx.appcompat.widget.AppCompatImageView
-        android:id="@+id/itemTodoMenuBtn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:padding="12dp"
-        app:srcCompat="@drawable/ic_menu" />
-
+        android:layout_gravity="center_vertical"
+        android:layout_marginHorizontal="12dp" />
 </LinearLayout>
