--- a/app/src/main/res/layout/activity_todos_list.xml
+++ b/app/src/main/res/layout/activity_todos_list.xml
@@ -28,7 +28,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             android:layout_margin="@dimen/fab_margin"
+            app:tint="@color/white"
             app:srcCompat="@drawable/ic_add"/>
-
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
